--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -61,8 +61,9 @@
 
 .MuiButton-startIcon,
 .MuiButton-endIcon {
-  font-size: 18px;
+  font-size: calc(1em + var(--md-ref-spacing-1));
 
+  /* use :not so that Tailwind CSS can override while being able to control arbitrary icons */
   & svg:not([class]) {
     font-size: inherit;
     width: 1em;
