update tokens from the meeting

--- a/src/app/m3-theme.css
+++ b/src/app/m3-theme.css
@@ -7,169 +7,144 @@
   --md-ref-typeface-brand: var(--font-geist-sans);
   --md-ref-typeface-plain: var(--font-geist-sans);
 
-  --md-ref-typeface-weight-medium: 500;
-  --md-ref-typeface-weight-regular: 400;
+  --md-ref-typeface-weight-medium: var();
+  --md-ref-typeface-weight-regular: var(--md-ref-font-weight-2);
+
+  /*
+  Custom weight scale
+  */
+  --md-ref-font-weight-1: 300;
+  --md-ref-font-weight-2: 400;
+  --md-ref-font-weight-3: 500;
 
   /*
   Custom font-size scale
   */
-  --md-ref-typeface-size-1: 11px; /* label-small */
-  --md-ref-typeface-size-2: 12px; /* label-medium */
-  --md-ref-typeface-size-3: 14px; /* label-large, body-small */
-  --md-ref-typeface-size-4: 16px; /* body-medium */
-  --md-ref-typeface-size-5: 22px; /* body-large, title-small */
-  --md-ref-typeface-size-6: 24px; /* title-medium */
-  --md-ref-typeface-size-7: 28px; /* title-large */
-  --md-ref-typeface-size-8: 32px; /* headline-small */
-  --md-ref-typeface-size-9: 45px; /* headline-medium */
-  --md-ref-typeface-size-10: 57px; /* headline-large */
-  --md-ref-typeface-size-11: 64px; /* display-small */
-  --md-ref-typeface-size-12: 80px; /* display-medium */
-  --md-ref-typeface-size-13: 96px; /* display-large */
+  --md-ref-font-size-1: 0.6875rem; /* label-small */
+  --md-ref-font-size-2: 0.75rem; /* label-medium */
+  --md-ref-font-size-3: 0.875rem; /* label-large, body-small */
+  --md-ref-font-size-4: 1rem; /* body-medium */
+  --md-ref-font-size-5: 1.375rem; /* body-large, title-small */
+  --md-ref-font-size-6: 1.5rem; /* title-medium */
+  --md-ref-font-size-7: 1.75rem; /* title-large */
+  --md-ref-font-size-8: 2rem; /* headline-small */
+  --md-ref-font-size-9: 2.8125rem; /* headline-medium */
+  --md-ref-font-size-10: 3.5625rem; /* headline-large */
+  --md-ref-font-size-11: 4rem; /* display-small */
+  --md-ref-font-size-12: 5rem; /* display-medium */
+  --md-ref-font-size-13: 6rem; /* display-large */
 
   /*
   Custom line-height scale based on typescale variables
   */
-  --md-ref-typeface-line-height-1: 16px; /* label-small, label-medium, body-small */
-  --md-ref-typeface-line-height-2: 20px; /* label-large, title-small */
-  --md-ref-typeface-line-height-3: 24px; /* body-medium, body-large, title-medium */
-  --md-ref-typeface-line-height-4: 28px; /* title-large */
-  --md-ref-typeface-line-height-5: 32px; /* headline-small */
-  --md-ref-typeface-line-height-6: 36px; /* headline-medium */
-  --md-ref-typeface-line-height-7: 40px; /* headline-large */
-  --md-ref-typeface-line-height-8: 44px; /* display-small */
-  --md-ref-typeface-line-height-9: 52px; /* display-medium */
-  --md-ref-typeface-line-height-10: 64px; /* display-large */
+  --md-ref-line-height-1: 1rem; /* label-small, label-medium, body-small */
+  --md-ref-line-height-2: 1.25rem; /* label-large, title-small */
+  --md-ref-line-height-3: 1.5rem; /* body-medium, body-large, title-medium */
+  --md-ref-line-height-4: 1.75rem; /* title-large */
+  --md-ref-line-height-5: 2rem; /* headline-small */
+  --md-ref-line-height-6: 2.25rem; /* headline-medium */
+  --md-ref-line-height-7: 2.5rem; /* headline-large */
+  --md-ref-line-height-8: 2.75rem; /* display-small */
+  --md-ref-line-height-9: 3.25rem; /* display-medium */
+  --md-ref-line-height-10: 4rem; /* display-large */
 
   /*
   Custom letter-spacing (tracking) scale based on typescale variables
   */
-  --md-ref-typeface-tracking-0: 0px;
-  --md-ref-typeface-tracking-1: 0.1px;
-  --md-ref-typeface-tracking-2: 0.15px;
-  --md-ref-typeface-tracking-3: 0.25px;
-  --md-ref-typeface-tracking-4: 0.4px;
-  --md-ref-typeface-tracking-5: 0.5px;
+  --md-ref-tracking-0: 0em;
+  --md-ref-tracking-1: 0.00625em;
+  --md-ref-tracking-2: 0.009375em;
+  --md-ref-tracking-3: 0.015625em;
+  --md-ref-tracking-4: 0.025em;
+  --md-ref-tracking-5: 0.03125em;
 
   --md-sys-typescale-display-large-font: var(--md-ref-typeface-brand);
   --md-sys-typescale-display-large-weight: var(
     --md-ref-typeface-weight-regular
   );
-  --md-sys-typescale-display-large-size: var(--md-ref-typeface-size-10);
-  --md-sys-typescale-display-large-tracking: var(--md-ref-typeface-tracking-0);
-  --md-sys-typescale-display-large-line-height: var(
-    --md-ref-typeface-line-height-10
-  );
+  --md-sys-typescale-display-large-size: var(--md-ref-font-size-10);
+  --md-sys-typescale-display-large-tracking: var(--md-ref-tracking-0);
+  --md-sys-typescale-display-large-line-height: var(--md-ref-line-height-10);
   --md-sys-typescale-display-medium-font: var(--md-ref-typeface-brand);
   --md-sys-typescale-display-medium-weight: var(
     --md-ref-typeface-weight-regular
   );
-  --md-sys-typescale-display-medium-size: var(--md-ref-typeface-size-9);
-  --md-sys-typescale-display-medium-tracking: var(--md-ref-typeface-tracking-0);
-  --md-sys-typescale-display-medium-line-height: var(
-    --md-ref-typeface-line-height-9
-  );
+  --md-sys-typescale-display-medium-size: var(--md-ref-font-size-9);
+  --md-sys-typescale-display-medium-tracking: var(--md-ref-tracking-0);
+  --md-sys-typescale-display-medium-line-height: var(--md-ref-line-height-9);
   --md-sys-typescale-display-small-font: var(--md-ref-typeface-brand);
   --md-sys-typescale-display-small-weight: var(
     --md-ref-typeface-weight-regular
   );
-  --md-sys-typescale-display-small-size: var(--md-ref-typeface-size-8);
-  --md-sys-typescale-display-small-tracking: var(--md-ref-typeface-tracking-0);
-  --md-sys-typescale-display-small-line-height: var(
-    --md-ref-typeface-line-height-8
-  );
+  --md-sys-typescale-display-small-size: var(--md-ref-font-size-8);
+  --md-sys-typescale-display-small-tracking: var(--md-ref-tracking-0);
+  --md-sys-typescale-display-small-line-height: var(--md-ref-line-height-8);
   --md-sys-typescale-headline-large-font: var(--md-ref-typeface-brand);
   --md-sys-typescale-headline-large-weight: var(
     --md-ref-typeface-weight-regular
   );
-  --md-sys-typescale-headline-large-size: var(--md-ref-typeface-size-8);
-  --md-sys-typescale-headline-large-tracking: var(--md-ref-typeface-tracking-0);
-  --md-sys-typescale-headline-large-line-height: var(
-    --md-ref-typeface-line-height-7
-  );
+  --md-sys-typescale-headline-large-size: var(--md-ref-font-size-8);
+  --md-sys-typescale-headline-large-tracking: var(--md-ref-tracking-0);
+  --md-sys-typescale-headline-large-line-height: var(--md-ref-line-height-7);
   --md-sys-typescale-headline-medium-font: var(--md-ref-typeface-brand);
   --md-sys-typescale-headline-medium-weight: var(
     --md-ref-typeface-weight-regular
   );
-  --md-sys-typescale-headline-medium-size: var(--md-ref-typeface-size-7);
-  --md-sys-typescale-headline-medium-tracking: var(
-    --md-ref-typeface-tracking-0
-  );
-  --md-sys-typescale-headline-medium-line-height: var(
-    --md-ref-typeface-line-height-6
-  );
+  --md-sys-typescale-headline-medium-size: var(--md-ref-font-size-7);
+  --md-sys-typescale-headline-medium-tracking: var(--md-ref-tracking-0);
+  --md-sys-typescale-headline-medium-line-height: var(--md-ref-line-height-6);
   --md-sys-typescale-headline-small-font: var(--md-ref-typeface-brand);
   --md-sys-typescale-headline-small-weight: var(
     --md-ref-typeface-weight-regular
   );
-  --md-sys-typescale-headline-small-size: var(--md-ref-typeface-size-6);
-  --md-sys-typescale-headline-small-tracking: var(--md-ref-typeface-tracking-0);
-  --md-sys-typescale-headline-small-line-height: var(
-    --md-ref-typeface-line-height-5
-  );
+  --md-sys-typescale-headline-small-size: var(--md-ref-font-size-6);
+  --md-sys-typescale-headline-small-tracking: var(--md-ref-tracking-0);
+  --md-sys-typescale-headline-small-line-height: var(--md-ref-line-height-5);
   --md-sys-typescale-title-large-font: var(--md-ref-typeface-brand);
   --md-sys-typescale-title-large-weight: var(--md-ref-typeface-weight-regular);
-  --md-sys-typescale-title-large-size: var(--md-ref-typeface-size-5);
-  --md-sys-typescale-title-large-tracking: var(--md-ref-typeface-tracking-0);
-  --md-sys-typescale-title-large-line-height: var(
-    --md-ref-typeface-line-height-4
-  );
+  --md-sys-typescale-title-large-size: var(--md-ref-font-size-5);
+  --md-sys-typescale-title-large-tracking: var(--md-ref-tracking-0);
+  --md-sys-typescale-title-large-line-height: var(--md-ref-line-height-4);
   --md-sys-typescale-title-medium-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-title-medium-weight: var(--md-ref-typeface-weight-medium);
-  --md-sys-typescale-title-medium-size: var(--md-ref-typeface-size-6);
-  --md-sys-typescale-title-medium-tracking: var(--md-ref-typeface-tracking-2);
-  --md-sys-typescale-title-medium-line-height: var(
-    --md-ref-typeface-line-height-3
-  );
+  --md-sys-typescale-title-medium-size: var(--md-ref-font-size-6);
+  --md-sys-typescale-title-medium-tracking: var(--md-ref-tracking-2);
+  --md-sys-typescale-title-medium-line-height: var(--md-ref-line-height-3);
   --md-sys-typescale-title-small-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-title-small-weight: var(--md-ref-typeface-weight-medium);
-  --md-sys-typescale-title-small-size: var(--md-ref-typeface-size-3);
-  --md-sys-typescale-title-small-tracking: var(--md-ref-typeface-tracking-1);
-  --md-sys-typescale-title-small-line-height: var(
-    --md-ref-typeface-line-height-2
-  );
+  --md-sys-typescale-title-small-size: var(--md-ref-font-size-3);
+  --md-sys-typescale-title-small-tracking: var(--md-ref-tracking-1);
+  --md-sys-typescale-title-small-line-height: var(--md-ref-line-height-2);
   --md-sys-typescale-body-large-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-body-large-weight: var(--md-ref-typeface-weight-regular);
-  --md-sys-typescale-body-large-size: var(--md-ref-typeface-size-4);
-  --md-sys-typescale-body-large-tracking: var(--md-ref-typeface-tracking-5);
-  --md-sys-typescale-body-large-line-height: var(
-    --md-ref-typeface-line-height-3
-  );
+  --md-sys-typescale-body-large-size: var(--md-ref-font-size-4);
+  --md-sys-typescale-body-large-tracking: var(--md-ref-tracking-5);
+  --md-sys-typescale-body-large-line-height: var(--md-ref-line-height-3);
   --md-sys-typescale-body-medium-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-body-medium-weight: var(--md-ref-typeface-weight-regular);
-  --md-sys-typescale-body-medium-size: var(--md-ref-typeface-size-3);
-  --md-sys-typescale-body-medium-tracking: var(--md-ref-typeface-tracking-3);
-  --md-sys-typescale-body-medium-line-height: var(
-    --md-ref-typeface-line-height-2
-  );
+  --md-sys-typescale-body-medium-size: var(--md-ref-font-size-3);
+  --md-sys-typescale-body-medium-tracking: var(--md-ref-tracking-3);
+  --md-sys-typescale-body-medium-line-height: var(--md-ref-line-height-2);
   --md-sys-typescale-body-small-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-body-small-weight: var(--md-ref-typeface-weight-regular);
-  --md-sys-typescale-body-small-size: var(--md-ref-typeface-size-2);
-  --md-sys-typescale-body-small-tracking: var(--md-ref-typeface-tracking-4);
-  --md-sys-typescale-body-small-line-height: var(
-    --md-ref-typeface-line-height-1
-  );
+  --md-sys-typescale-body-small-size: var(--md-ref-font-size-2);
+  --md-sys-typescale-body-small-tracking: var(--md-ref-tracking-4);
+  --md-sys-typescale-body-small-line-height: var(--md-ref-line-height-1);
   --md-sys-typescale-label-large-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-label-large-weight: var(--md-ref-typeface-weight-medium);
-  --md-sys-typescale-label-large-size: var(--md-ref-typeface-size-3);
-  --md-sys-typescale-label-large-tracking: var(--md-ref-typeface-tracking-1);
-  --md-sys-typescale-label-large-line-height: var(
-    --md-ref-typeface-line-height-2
-  );
+  --md-sys-typescale-label-large-size: var(--md-ref-font-size-3);
+  --md-sys-typescale-label-large-tracking: var(--md-ref-tracking-1);
+  --md-sys-typescale-label-large-line-height: var(--md-ref-line-height-2);
   --md-sys-typescale-label-medium-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-label-medium-weight: var(--md-ref-typeface-weight-medium);
-  --md-sys-typescale-label-medium-size: var(--md-ref-typeface-size-2);
-  --md-sys-typescale-label-medium-tracking: var(--md-ref-typeface-tracking-5);
-  --md-sys-typescale-label-medium-line-height: var(
-    --md-ref-typeface-line-height-1
-  );
+  --md-sys-typescale-label-medium-size: var(--md-ref-font-size-2);
+  --md-sys-typescale-label-medium-tracking: var(--md-ref-tracking-5);
+  --md-sys-typescale-label-medium-line-height: var(--md-ref-line-height-1);
   --md-sys-typescale-label-small-font: var(--md-ref-typeface-plain);
   --md-sys-typescale-label-small-weight: var(--md-ref-typeface-weight-medium);
-  --md-sys-typescale-label-small-size: var(--md-ref-typeface-size-1);
-  --md-sys-typescale-label-small-tracking: var(--md-ref-typeface-tracking-5);
-  --md-sys-typescale-label-small-line-height: var(
-    --md-ref-typeface-line-height-1
-  );
+  --md-sys-typescale-label-small-size: var(--md-ref-font-size-1);
+  --md-sys-typescale-label-small-tracking: var(--md-ref-tracking-5);
+  --md-sys-typescale-label-small-line-height: var(--md-ref-line-height-1);
 
   /*
   Shape tokens
@@ -213,22 +188,7 @@
   Motion
   https://m3.material.io/styles/motion/easing-and-duration/tokens-specs
   */
-  --md-ref-motion-duration-short1: 50ms; /* The spec uses `sys` but it makes more sense to be `ref` */
-  --md-ref-motion-duration-short2: 100ms;
-  --md-ref-motion-duration-short3: 150ms;
-  --md-ref-motion-duration-short4: 200ms;
-  --md-ref-motion-duration-medium1: 250ms;
-  --md-ref-motion-duration-medium2: 300ms;
-  --md-ref-motion-duration-medium3: 350ms;
-  --md-ref-motion-duration-medium4: 400ms;
-  --md-ref-motion-duration-long1: 450ms;
-  --md-ref-motion-duration-long2: 500ms;
-  --md-ref-motion-duration-long3: 550ms;
-  --md-ref-motion-duration-long4: 600ms;
-  --md-ref-motion-duration-extra-long1: 700ms;
-  --md-ref-motion-duration-extra-long2: 800ms;
-  --md-ref-motion-duration-extra-long3: 900ms;
-  --md-ref-motion-duration-extra-long4: 1000ms;
+  --md-ref-motion-duration-medium: 250ms;
 
   --md-sys-motion-easing-linear: linear;
   --md-sys-motion-easing-emphasized: var(--md-sys-motion-easing-standard);
@@ -250,15 +210,15 @@
   /*
   Custom spacing scale 
   */
-  --md-ref-spacing-1: 0.25rem; /* 4px */
-  --md-ref-spacing-2: 0.5rem; /* 8px */
-  --md-ref-spacing-3: 0.75rem; /* 12px */
-  --md-ref-spacing-4: 1rem; /* 16px */
-  --md-ref-spacing-5: 1.25rem; /* 20px */
-  --md-ref-spacing-6: 1.5rem; /* 24px */
-  --md-ref-spacing-7: 2rem; /* 32px */
-  --md-ref-spacing-8: 2.5rem; /* 40px */
-  --md-ref-spacing-9: 3rem; /* 48px */
+  --md-ref-spacing-1: 4px;
+  --md-ref-spacing-2: 8px;
+  --md-ref-spacing-3: 12px;
+  --md-ref-spacing-4: 16px;
+  --md-ref-spacing-5: 20px;
+  --md-ref-spacing-6: 24px;
+  --md-ref-spacing-7: 32px;
+  --md-ref-spacing-8: 40px;
+  --md-ref-spacing-9: 48px;
 }
 
 :root {
