--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -6,7 +6,7 @@
 }
 
 .MuiSlider-track {
-  position: relative;
+  clip-path: padding-box; /* to clip stop indicators */
   height: 16px;
   border-radius: 2px;
   overflow: hidden; /* for hiding the dot indicators */
@@ -21,20 +21,19 @@
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
   }
-
-  &:where(.MuiSlider-activeTrack) {
-    color: var(--md-sys-color-on-primary);
-    background: var(--md-sys-color-primary);
-    width: calc(
-      var(--handle-position) - var(--md-comp-slider-handle-space, 6px) -
-        calc(var(--md-comp-slider-handle-width, 4px) / 2)
-    ); /* account for handle space and width */
-  }
-  &:where(.MuiSlider-inactiveTrack) {
-    color: var(--md-sys-color-on-secondary-container);
-    background: var(--md-sys-color-secondary-container);
-    flex: 1;
-  }
+}
+.MuiSlider-activeTrack {
+  color: var(--md-sys-color-on-primary);
+  background: var(--md-sys-color-primary);
+  width: calc(
+    var(--handle-position) - var(--md-comp-slider-handle-space, 6px) -
+      calc(var(--md-comp-slider-handle-width, 4px) / 2)
+  ); /* account for handle space and width */
+}
+.MuiSlider-inactiveTrack {
+  color: var(--md-sys-color-on-secondary-container);
+  background: var(--md-sys-color-secondary-container);
+  flex: 1;
 }
 :where(.MuiSlider-root:has(.MuiSlider-handle:active)) .MuiSlider-activeTrack {
   width: calc(
@@ -107,13 +106,24 @@
 :where(.MuiSlider-discrete) .MuiSlider-stopIndicator {
   position: absolute;
   top: calc(50% - 4px / 2);
+}
+:where(.MuiSlider-discrete .MuiSlider-activeTrack) .MuiSlider-stopIndicator {
   &:first-of-type {
     left: 6px;
   }
-  &:not(:first-of-type):not(:last-of-type) {
-    margin-left: calc(var(--index) * 10% - 12px);
-  }
   &:last-of-type {
     right: 6px;
+  }
+  &:not(:first-of-type):not(:last-of-type) {
+    margin-inline-start: calc(var(--index) * 10% - 12px);
+  }
+}
+:where(.MuiSlider-discrete .MuiSlider-inactiveTrack) .MuiSlider-stopIndicator {
+  right: 6px;
+  &:last-of-type {
+    left: 6px;
+  }
+  &:not(:first-of-type):not(:last-of-type) {
+    margin-inline-end: calc(var(--index) * 10% - 12px);
   }
 }
